# genius-invokation-gym

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  element_reaction_note.ipynb  fetch-cards-20221205.py  generate_character_cards.py  pyproject.toml  setup.py  test.py  test_element_reaction.py  test_framework.py  test_framework_inclube_reaction.py  七圣召唤游戏规则.html  七圣召唤游戏规则.md
.github/workflows/: ci.yml
AutoGenerate/: Barbara.py  Beidou.py  Bennett.py  Chongyun.py  Diona.py  Fatui Pyro Agent.py  Fischl.py  Ganyu.py  Klee.py  Mona.py  Noelle.py  Xiangling.py  Yoimiya.py
autoSkil/: Beidou.py  Collei.py  Cyno.py  Diluc.py  Jadeplume Terrorshroom.py  Jean.py  Kaeya.py  Kamisato Ayaka.py  Keqing.py  Maguu Kenki.py  Mirror Maiden.py  Ningguang.py  Razor.py  Rhodeia of Loch.py  Stonehide Lawachurl.py  Sucrose.py  Xingqiu.py
gisim/: __init__.py  actions.py  agent.py  dealer.py  enum_classes.py  env.py  game.py  get_game_info.py  global_config.py  judge.py  judger.py  player.py  player_area.py  round.py  run.py  setup.py
gisim/ElementalReaction/: Bloom.py  Burning.py  Melt.py  (+12 more)
note/: element_reaction_note.ipynb  七圣召唤游戏规则.html  七圣召唤游戏规则.md
ocr/: README.md  cards_images.json  get_images_file.py  ocr.py
test/: test_framework.py
tests/: generate_character_cards.py  test_damage_calculation.py  test_element_reaction.py  test_framework.py  test_framework.py.py  test_framework_inclube_reaction.py  test_framework_with_reaction.py  test_game.py  test_messages.py
tools/: fetch-cards-20221205.py  generate_action_cards.py  generate_character_cards.py  lint.py  test.py
(+136 files in other folders)
