[tool.poetry]
name = "genius-invokation-gym"
version = "0.1.0"
description = "A gym environment for the Genshin Genius Invokation game."
authors = ["Genius Invokation Gym Contributors"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
devtools = "^0.10.0"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]
pyright = "^1.1.283"
black = "^22.12.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
