[tool.poetry]
name = "genius-invokation-gym"
version = "0.1.0"
description = "A gym environment for the Genshin Genius Invokation game."
authors = ["Genius Invokation Gym Contributors <any@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "gisim" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
devtools = "^0.10.0"

[tool.poetry.dev-dependencies]
pyright = "^1.1.283"
black = "^22.12.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-coverage = "^0.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
